feat: hito4 changes
