# src/schemas/auth.schema.ts
@@ -1,11 +1,17 @@
 import Joi from "joi";
 
-export const authLoginSchema = Joi.object({
-  email: Joi.string().email().required(),
-  password: Joi.string().trim().min(6).required(),
+export const userCreateSchema = Joi.object({
+  username: Joi.string().trim(),
+  password: Joi.string().trim().required().min(6),
+  email: Joi.string().trim().email().lowercase().required(),
 });
 
-export const authRegisterSchema = Joi.object({
-  email: Joi.string().email().required(),
-  password: Joi.string().trim().min(6).required(),
+export const userUpdateSchema = Joi.object({
+  username: Joi.string().trim(),
+  password: Joi.string().trim().min(6),
+  email: Joi.string().trim().email().lowercase(),
+});
+
+export const userUpdateParamsSchema = Joi.object({
+  uid: Joi.string().uuid({ version: "uuidv4" }).required(), // Acepta UUID v4
 });
